--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URL=mongodb+srv://<USERNAME>:<PASSWORD>@<CLUSTER_HOST>/<DB_NAME>?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://dima2001:Dima2001@cluster0.zqe8s.mongodb.net/test
 JWT_SECRET=sp-secret-0000
