--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.3",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/passport": "^8.0.1",
     "acorn": "^8.5.0",
     "anser": "^1.4.9",
     "ansi-regex": "^5.0.1",
@@ -159,6 +162,7 @@
     "minimalistic-assert": "^1.0.1",
     "minimalistic-crypto-utils": "^1.0.1",
     "minimist": "^1.2.5",
+    "mongoose": "^6.0.13",
     "ms": "^2.0.0",
     "nanoid": "^3.1.30",
     "new": "^0.1.1",
@@ -177,6 +181,7 @@
     "p-try": "^2.2.0",
     "pako": "^1.0.11",
     "parse-asn1": "^5.1.6",
+    "passport": "^0.4.1",
     "path-browserify": "^1.0.1",
     "path-exists": "^4.0.0",
     "pbkdf2": "^3.1.2",
