--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "pako": "^1.0.11",
     "parse-asn1": "^5.1.6",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "path-browserify": "^1.0.1",
     "path-exists": "^4.0.0",
     "pbkdf2": "^3.1.2",
