--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
+    "@nestjsi/class-validator": "^0.1.3",
     "acorn": "^8.5.0",
     "anser": "^1.4.9",
     "ansi-regex": "^5.0.1",
@@ -182,6 +183,7 @@
     "pako": "^1.0.11",
     "parse-asn1": "^5.1.6",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "path-browserify": "^1.0.1",
     "path-exists": "^4.0.0",
     "pbkdf2": "^3.1.2",
