--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.3",
+    "@nestjs/core": "^8.2.3",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
@@ -41,6 +42,7 @@
     "big.js": "^5.2.2",
     "binary-extensions": "^2.2.0",
     "bn.js": "^5.2.0",
+    "bootstrap": "^5.1.3",
     "braces": "^3.0.2",
     "brorand": "^1.1.0",
     "browserify-aes": "^1.2.0",
@@ -202,6 +204,7 @@
     "raw-body": "^2.4.1",
     "react-is": "^17.0.2",
     "react-refresh": "^0.8.3",
+    "reactstrap": "^9.0.1",
     "readable-stream": "^3.6.0",
     "readdirp": "^3.5.0",
     "regenerator-runtime": "^0.13.4",
