--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.3",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.2.3",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
+    "@nestjs/platform-express": "^8.2.3",
     "acorn": "^8.5.0",
     "anser": "^1.4.9",
     "ansi-regex": "^5.0.1",
@@ -204,6 +206,7 @@
     "raw-body": "^2.4.1",
     "react-is": "^17.0.2",
     "react-refresh": "^0.8.3",
+    "reactdom": "^2.0.0",
     "reactstrap": "^9.0.1",
     "readable-stream": "^3.6.0",
     "readdirp": "^3.5.0",
