--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-PORT=3000
-MONGO_URL=mongodb+srv://dima2001:Dima2001@cluster0.zqe8s.mongodb.net/test
+PORT=5000
+MONGO_URL=mongodb+srv://admin:admin@cluster0.gxxpw.mongodb.net
 JWT_SECRET=sp-secret-0000
