--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nestjs/common": "^8.2.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "next": "12.0.3",
