--- a/package.json
+++ b/package.json
@@ -204,6 +204,8 @@
     "raw-body": "^2.4.1",
     "react-is": "^17.0.2",
     "react-refresh": "^0.8.3",
+    "react-router-dom": "^6.0.2",
+    "reactdom": "^2.0.0",
     "reactstrap": "^9.0.1",
     "readable-stream": "^3.6.0",
     "readdirp": "^3.5.0",
@@ -220,6 +222,7 @@
     "shell-quote": "^1.7.3",
     "side-channel": "^1.0.4",
     "source-map": "^0.8.0-beta.0",
+    "source-map-support": "^0.5.21",
     "spawn-command": "^0.0.2-1",
     "stacktrace-parser": "^0.1.10",
     "statuses": "^1.5.0",
