--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/passport": "^8.0.1",
-    "@nestjsi/class-validator": "^0.1.3",
     "@nestjs/platform-express": "^8.2.3",
+    "@nestjsi/class-validator": "^0.1.3",
     "acorn": "^8.5.0",
     "anser": "^1.4.9",
     "ansi-regex": "^5.0.1",
@@ -206,6 +206,7 @@
     "randomfill": "^1.0.4",
     "raw-body": "^2.4.1",
     "react-is": "^17.0.2",
+    "react-query": "^3.33.7",
     "react-refresh": "^0.8.3",
     "reactdom": "^2.0.0",
     "reactstrap": "^9.0.1",
