--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-PORT=3000
-MONGO_URL=mongodb+srv://<USERNAME>:<PASSWORD>@<CLUSTER_HOST>/<DB_NAME>?retryWrites=true&w=majority
+PORT=5000
+MONGO_URL=mongodb+srv://admin:admin@cluster0.gxxpw.mongodb.net
 JWT_SECRET=sp-secret-0000
