--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^8.2.3",
+    "@nestjs/mongoose": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "mongoose": "^6.0.14"
   }
 }
