--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.3",
+    "@nestjs/config": "^1.1.5",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/passport": "^8.0.1",
+    "@nestjs/platform-express": "^8.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.0.14",
+    "passport-jwt": "^4.0.0"
   }
 }
