--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.0.14",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "react-bootstrap": "^2.0.3",
+    "react-query": "^3.34.0"
   }
 }
