--- a/package.json
+++ b/package.json
@@ -23,5 +23,14 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^8.2.3",
+    "@nestjs/core": "^8.2.3",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/passport": "^8.0.1",
+    "class-validator": "^0.13.2",
+    "passport-jwt": "^4.0.0"
   }
 }
