--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,9 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-query": "^3.32.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.0",
     "reactstrap": "^9.0.0"
   },
   "devDependencies": {
