--- a/server/.gitignore
+++ b/server/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /public/internal
 /public/out
-
+/node_modules
 # Logs
 logs
 *.log
@@ -37,3 +37,6 @@ jest.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+
+/node_modules
