--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL=mongodb+srv://admin:admin@cluster0.gxxpw.mongodb.net
+MONGO_URL=mongodb+srv://admin:admin@cluster0.gxxpw.mongodb.net/test
 JWT_SECRET=sp-secret-0000
