--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.0.1",
     "class-validator": "^0.13.2",
+    "localtunnel": "^2.0.2",
     "mongoose": "^6.1.5",
     "ngrok": "^4.2.2",
     "passport-jwt": "^4.0.0"
