--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "localtunnel": "^2.0.2",
     "mongoose": "^6.0.12",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
